...
    <string name="profile_instance_version">Version</string>
    <string name="profile_instance_mode">Mode</string>
    <string name="profile_instance_url">URL</string>
    <string name="profile_logout">Logout</string>

    <string name="profile_about">About MemosM</string>
    <string name="profile_about_version">App Version</string>
    <string name="profile_about_git_hash">Git Hash</string>
    <string name="profile_about_version_copied">Version copied to clipboard</string>
    <string name="profile_about_repo">Source Code</string>
    <string name="profile_about_repo_url" translatable="false">https://github.com/yamada-sexta/memos-m</string>
    <string name="profile_about_issues">Report an Issue</string>
    <string name="profile_about_issues_url" translatable="false">https://github.com/yamada-sexta/memos-m/issues</string>
...
    <string name="memo_list_end">You\'ve reached the end</string>
    <string name="memo_unknown_user">Unknown</string>
    <string name="memo_unknown_time">UNKNOWN</string>
    <string name="memo_action_update">Update</string>
    <string name="memo_action_post">Post</string>
    <string name="memo_action_add_reaction">Add Reaction</string>
    <string name="memo_action_play">Play</string>
    <string name="memo_action_pause">Pause</string>
    <string name="audio_seek">Playback progress</string>
    <string name="audio_rewind_30">Rewind 30 seconds</string>
    <string name="audio_forward_30">Forward 30 seconds</string>
    <string name="video_seek">Video playback progress</string>
    <string name="video_rewind_10">Rewind 10 seconds</string>
...

    <string name="memo_visibility_public">Public</string>
    <string name="memo_visibility_protected">Protected</string>
    <string name="memo_visibility_private">Private</string>
    <string name="memo_visibility_unspecified">Unknown</string>

    <string name="common_save">Save</string>
    <string name="common_share">Share</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_close">Close</string>
    <string name="common_not_available">N/A</string>
    <string name="common_remove">Remove</string>
    <string name="common_delete">Delete</string>
    <string name="common_error_failed_to_load">Unable to load</string>
    <string name="common_error_failed_to_load_memos">Unable to load memos</string>
    <string name="common_error_failed_to_load_explore">Unable to load explore</string>
...
    <string name="offline_op_update">Edit memo</string>
    <string name="offline_op_delete">Delete memo</string>
    <string name="offline_op_comment_create">Add comment</string>
    <string name="offline_op_reaction_upsert">Add reaction</string>
    <string name="offline_op_reaction_delete">Remove reaction</string>
    <string name="offline_settings_title">Offline Cache</string>
    <string name="offline_settings_pre_download_text">Cache memo text</string>
    <string name="offline_settings_pre_download_attachments">Cache attachments</string>
    <string name="offline_settings_wifi_only">Cache on Wi-Fi only</string>
    <string name="offline_settings_pre_download_explore">Cache Explore feed</string>
    <string name="offline_settings_cache_size">Attachment cache limit</string>
    <string name="offline_settings_cache_size_text">Text cache limit</string>
    <string name="offline_settings_cache_size_theme">Media cache limit</string>
    <string name="offline_settings_custom">Custom</string>
    <string name="offline_settings_cache_size_hint">Enter size</string>
    <string name="offline_settings_cache_analysis_title">Cache analysis</string>
    <string name="offline_settings_media_usage">Media cache: %1$s</string>
    <string name="offline_clear_media">Clear Media Cache</string>
...
    <string name="appearance_font_system">System default</string>
    <string name="appearance_font_sans">Sans serif</string>
    <string name="appearance_font_serif">Serif</string>
    <string name="appearance_font_mono">Monospace</string>
    <string name="appearance_save_error">Could not save appearance. Try again.</string>
    <!-- Hidden About-screen game. -->
    <string name="memo_catch_title">Memo Catch</string>
    <string name="memo_catch_instruction">Drag the tray to catch the falling memos.</string>
    <string name="memo_catch_welcome">You found a little distraction!</string>
    <string name="memo_catch_play">Play</string>
    <string name="memo_catch_replay">Play again</string>
    <string name="memo_catch_resume">Resume</string>
    <string name="memo_catch_paused">Taking a little break</string>
    <string name="memo_catch_finished">Nice catch!</string>
    <string name="memo_catch_score">Score: %1$d</string>
    <string name="memo_catch_time">%1$d s left</string>
    <string name="memo_catch_tray_position">Tray position: %1$d percent</string>
    <string name="memo_catch_move_left">Move tray left</string>
    <string name="memo_catch_move_right">Move tray right</string>

...
